--- a/src/scss/labor-page-style.css
+++ b/src/scss/labor-page-style.css
@@ -486,4 +486,19 @@ body {
   .discr-block-lis__card4 {
     width: 490px;
   }
+}
+@media only screen and (max-width: 1024px) {
+  .discr-block-lis__card1 {
+    width: 505px;
+  }
+  .discr-block-lis__card2 {
+    width: 243px;
+  }
+  .discr-block-lis__card3,
+  .discr-block-lis__card4 {
+    width: 374px;
+  }
+  .db-lis-card__title {
+    font-size: 20px;
+  }
 }/*# sourceMappingURL=labor-page-style.css.map */
