--- a/src/html/labor-page/labor-information-section.pug
+++ b/src/html/labor-page/labor-information-section.pug
@@ -4,7 +4,7 @@ section.labor-information-section
         .labor-information-section__discr-block
             .discr-block-lis__card.discr-block-lis__card1
                 .db-lis-card__title ЗАКАЗАТЬ ВНЕДРЕНИЕ
-                .db-lis-card__text Для расчета стоимости и сроков внедрения системы управления охраной труда на предприятии, можно оформить электронную заявку или позвонить по телефону +7 (812) 921-59-71 и согласовать видео встречу.
+                .db-lis-card__text О стоимости и сроках внедрения системы управления охраной труда, можно узнать позвонив по телефону +7 (812) 921-59-71 или заказать звонок (через форму в нижней части сайта).
                 .left-part-sc__button от 300 000 р.
             .discr-block-lis__card.discr-block-lis__card2
                 .db-lis-card__title АУДИТ КОМПАНИИ
@@ -12,7 +12,7 @@ section.labor-information-section
         .labor-information-section__discr-block
             .discr-block-lis__card.discr-block-lis__card3
                 .db-lis-card__title РАЗРАБОТКА ДОКУМЕНТАЦИИ
-                .db-lis-card__text.db-lis-card__text_card3 На основании результатов аудита проводится работа по разработке пакета документов определяющих политику в области охраны труда и внедрение их на предприятии.
+                .db-lis-card__text.db-lis-card__text_card3 По результатам аудита проводится работа по разработке пакета документов определяющих политику в области охраны труда и документов подверждающих внедрение политики в компании.
             .discr-block-lis__card.discr-block-lis__card4
                 .db-lis-card__title ОБУЧЕНИЕ ПЕРСОНАЛА
                 .db-lis-card__text.db-lis-card__text_card4 На основании разработанной нормативной документации проводится обучение персонала и верификация полученных ими знаний.
