--- a/src/index.pug
+++ b/src/index.pug
@@ -28,3 +28,4 @@ block content
         include html/supply-page/supply-request-section.pug
     include html/footer.pug 
     script(src="js/app.js")
+    script(src="js/modules/burger-action.js")
