--- a/src/labor.pug
+++ b/src/labor.pug
@@ -23,6 +23,7 @@ block content
         include html/labor-page/labor-information-section.pug
     include html/footer.pug 
     script(src="js/app.js")
+    script(src="js/modules/burger-action.js")
 
 
     
