--- a/src/supply.pug
+++ b/src/supply.pug
@@ -27,5 +27,6 @@ block content
         include html/supply-page/supply-request-section.pug 
     include html/footer.pug 
     script(src="js/app.js")
+    script(src="js/modules/burger-action.js")
 
 
