--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -2376,6 +2376,7 @@ body {
 }
 
 .labor-information-section__title {
+  font-family: "Days One", "Roboto Condensed", sans-serif;
   color: #D9D9D9;
   margin-bottom: 4px;
 }
