--- a/src/scss/labor-page/labor-information-section.css
+++ b/src/scss/labor-page/labor-information-section.css
@@ -3,6 +3,7 @@
 }
 
 .labor-information-section__title {
+  font-family: "Days One", "Roboto Condensed", sans-serif;
   color: #D9D9D9;
   margin-bottom: 4px;
 }
