--- a/src/scss/lean-page-style.css
+++ b/src/scss/lean-page-style.css
@@ -144,23 +144,28 @@
 }
 .step-section {
   display: flex;
-  justify-content: space-between;
   max-width: 1280px;
   padding-bottom: 80px;
 }
 
 .discription-block {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+.content-title__step-section {
+  padding-left: 48px;
 }
 
 .discription-card {
   padding-bottom: 40px;
   width: 320px;
   height: 480px;
-  border: 2px solid #8E0532;
-  border-radius: 18px;
-  box-shadow: 0px 0px 10px #000000;
+  border: 1px solid #b9b9b9;
+}
+
+.discription-card:not(:last-of-type) {
+  margin-right: 20px;
 }
 
 .discription-card__img {
@@ -169,7 +174,6 @@
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 50px;
-  border-radius: 16px 16px 0px 0px;
 }
 
 .discription-card__img1 {
@@ -351,8 +355,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -494,8 +497,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -785,4 +787,4 @@ select {
   .form-tel-footer__input {
     width: 190px;
   }
-}/*# sourceMappingURL=lean-page-style.css.map */
+}
